The blog is now 80% ready for get articles :)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
----
-theme :
-  name : twitter
----
-{% include JB/setup %}
-{% include themes/twitter/default.html %}
+{% include header %}
+
+    <div id="contentWrap">
+        {{ content }}
+    </div>
+
+{% include footer %}
