--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -299,6 +299,10 @@ body {
             line-height: 20px;
         }
     }
+    p {
+        padding: 5px;
+        font-size: 1.1em;
+    }
 }
 
 /**
