Fix css in references

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -297,6 +297,9 @@ body {
         padding-left:       15px;
         li {
             line-height: 20px;
+            p {
+                padding: 0;
+            }
         }
     }
     p {
