--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,6 +1,13 @@
 $border-color:  #bbd367;
 $bg-color:      #f2f4d1;
 
+// Border Radius
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+          border-radius: $radius;
+}
+
 @import "base";
 @import "a";
 @import "layout";
@@ -12,3 +19,4 @@ $bg-color:      #f2f4d1;
 @import "references";
 @import "post";
 @import "pygments";
+@import "code";
