[header] link on logo

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,6 +45,12 @@ body {
         position:       absolute;
         top:            -999999px;
     }
+    a {
+        float: left;
+        width: 375px;
+        height: 58px;
+        margin: 15px 0 0 1px;
+    }
 }
 
 
