--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,11 @@
         </li>
         <li>
             <span>Les tags</span>
-            <strong>{{ page.tags | join:", " }}</strong>
+            <strong>
+                {% for tag in page.tags %}
+                <a href="/search.html?tag={{ tag }}">{{ tag }}</a>{% if forloop.last != true %}, {% endif %}
+                {% endfor %}
+            </strong>
         </li>
         {% if page.github %}
         <li>
