--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -446,7 +446,7 @@ body {
 
 #contentWrap blockquote {
     padding-left: 10px;
-    margin-left: 10px;
+    margin: 15px 0 15px 10px;
     border-left: 3px solid $border-color;
     color: lighten(#292E10, 15%);
 }
