--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,4 +1,4 @@
-pre {
+pre, .code {
     font-family: Consolas, "Liberation Mono", Courier, monospace;
     font-size: 12px;
     border: 1px solid $border-color;
