--- a/_sass/_references.scss
+++ b/_sass/_references.scss
@@ -38,6 +38,7 @@ $f-color: lighten(#000, 20%);
                     width: 290px;
                     float: right;
                     font-size: 1.1em;
+                    padding-left: 0;
                     li {
                         float: right;
                         width: 290px;
