Added twitter button in post sidebar + auto scroll for sidebar in post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,10 @@
         {% endif %}
     </ul>
 
+    <div class="social">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.production_url }}{{ page.url }}" data-text="{{ page.title }}" data-via="{{ site.author.twitter }}">Tweet</a>
+    </div>
+
     {% endcapture %}
 
     <div id="contentWrap" class="post">
