Update reference pages

--- a/_layouts/reference.html
+++ b/_layouts/reference.html
@@ -39,7 +39,7 @@ var techno = function (nb)
 </div>
 {% endcapture %}
 
-<div id="contentWrap">
+<div id="contentWrap" class="reference">
 {{ content }}
 </div>
 
