Magento Developer Logo :)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,6 +35,7 @@ body {
  * & Espace client
  */
 #headerWrap {
+    position:           relative;
     width:              100%;
     background:         url(../img/header.png) no-repeat 1px 15px;
     height:             95px;
@@ -50,6 +51,26 @@ body {
         width: 375px;
         height: 58px;
         margin: 15px 0 0 1px;
+    }
+}
+
+/**
+ * Magento Certified
+ */
+#magento_certified {
+    height: 80px;
+    position: absolute;
+    top: 8px;
+    left: 900px;
+    width: 44px;
+    a {
+        display: block;
+        height: 80px;
+        width: 44px;
+        margin: 0;
+    }
+    .developer {
+        background: url(../img/magento_developer.png) top left no-repeat transparent;
     }
 }
 
