Magento Frontend Developer badge

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -61,12 +61,12 @@ body {
     height: 80px;
     position: absolute;
     top: 8px;
-    left: 851px;
-    width: 93px;
+    left: 802px;
+    width: 145px;
     a {
         display: block;
         height: 80px;
-        width: 44px;
+        width: 45px;
         margin: 0;
     }
     .developer {
@@ -75,6 +75,10 @@ body {
     }
     .developer-plus {
         background: url(../img/magento_developer_plus.png) top left no-repeat transparent;
+        margin-right: 5px;
+    }
+    .frontend-developer {
+        background: url(../img/magento_frontend_developer.png) top left no-repeat transparent;
     }
 }
 
