Perform blog with Monsieur Biz additions

--- a/_layouts/apropos.html
+++ b/_layouts/apropos.html
@@ -1,7 +1,7 @@
 {% include header %}
 
 {% capture sidebar %}
-    <div>
+    <div class="me">
         <img src="/images/me.jpg" alt="" width="277" height="346" />
     </div>
 {% endcapture %}
