--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,7 +9,7 @@
  */
 body {
     font-family:        'Times New Roman', Verdana, Helvetica, Arial, Sans-serif;
-    color:              #292e10;
+    color:              $txt-color;
     background-color:   #fffcf3;
 }
 
@@ -286,6 +286,39 @@ body {
     text-decoration:    none;
 }
 
+
+/**
+ * Link to Monsieur Biz
+ */
+#topWrap {
+    div.mbiz {
+        border: 1px solid #BBD367;
+        padding: 5px;
+        width: 938px;
+        text-align: center;
+        p {
+            background-color: #F2F4D1;
+            width: 100%;
+            a {
+                display: block;
+                width: 100%;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                color: $txt-color;
+                position: relative;
+                img {
+                    position: absolute;
+                    top: 0px;
+                    height: 35px;
+                }
+                span {
+                    padding-left: 45px;
+                }
+            }
+        }
+    }
+}
+
 /**
  * Sidebar
  */
@@ -334,6 +367,9 @@ body {
             float: right;
             font-weight: normal;
         }
+    }
+    .me {
+        margin-top: 20px;
     }
 }
 
@@ -384,71 +420,61 @@ body {
     border-top:         5px solid #000000;
     width:              910px;
     overflow:           visible;
+    form {
+        width:              390px;
+        float:              left;
+        h3 {
+            margin-bottom:      10px;
+        }
+        p {
+            padding-bottom:     2px;
+        }
+        label {
+            display:            block;
+            width:              75px;
+            float:              left;
+            line-height:        21px;
+            font-size:          1.1em;
+        }
+        input.text, textarea {
+            border:             1px solid #d9d9c5;
+            padding:            2px;
+            font-size:          13px;
+            font-family:        'Times New Roman', Verdana, Helvetica, Arial, Sans-serif;
+        }
+        input.text {
+            height:             17px;
+            line-height:        17px;
+            width:              306px;
+        }
+        textarea {
+            width:              306px;
+            height:             100px;
+        }
+        p.send {
+            text-align:         center;
+            padding-left:       75px;
+            padding-top:        5px;
+            input {
+                background:         url(../img/contact_send.png) no-repeat top left;
+                width:              104px;
+                height:             30px;
+                color:              white;
+                border:             none;
+                font-family:        'Times New Roman', Verdana, Helvetica, Arial, Sans-serif;
+                font-size:          1.2em;
+            }
+        }
+    }
+    div.qrcode {
+        width:              270px;
+        float:              right;
+        p {
+            text-align:         center;
+        }
+    }
 }
 
-#contactWrap form {
-    width:              390px;
-    float:              left;
-}
-
-#contactWrap form h3 {
-    margin-bottom:      10px;
-}
-
-#contactWrap form p {
-    padding-bottom:     2px;
-}
-
-#contactWrap form label {
-    display:            block;
-    width:              75px;
-    float:              left;
-    line-height:        21px;
-    font-size:          1.1em;
-}
-
-#contactWrap form input.text, #contactWrap form textarea {
-    border:             1px solid #d9d9c5;
-    padding:            2px;
-    font-size:          13px;
-    font-family:        'Times New Roman', Verdana, Helvetica, Arial, Sans-serif;
-}
-
-#contactWrap form input.text {
-    height:             17px;
-    line-height:        17px;
-    width:              221px;
-}
-
-#contactWrap form textarea {
-    width:              306px;
-    height:             100px;
-}
-
-#contactWrap form p.send {
-    text-align:         center;
-    padding-left:       75px;
-    padding-top:        5px;
-}
-
-#contactWrap form p.send input {
-    background:         url(../img/contact_send.png) no-repeat top left;
-    width:              104px;
-    height:             30px;
-    color:              white;
-    border:             none;
-    font-family:        'Times New Roman', Verdana, Helvetica, Arial, Sans-serif;
-    font-size:          1.2em;
-}
-
-#contactWrap div.qrcode {
-    width:              270px;
-    float:              right;
-}
-
-#contactWrap div.qrcode p {
-    text-align:         center;
-}
 
 /**
  * Footer
