Fix footer links

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -500,6 +500,10 @@ body {
         float: left;
         margin: 5px 20px;
     }
+    .copy {
+        color: $txt-color;
+        letter-spacing: 2px;
+    }
 }
 
 
