--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@ body { font-family: 'Times New Roman', Verdana, Helvetica, Arial, Sans-serif; co
 #magento_certified .frontend-developer { background: url(../img/magento_frontend_developer.png) top left no-repeat transparent; }
 #magento_certified .solution-specialist { background: url(../img/magento_solution_specialist.png) top left no-repeat transparent; margin-right: 5px; }
 
+/** Forum PHP */
+#forumphp { height: 80px; position: absolute; top: 8px; left: 400px; width: 364px; }
+#forumphp a { display: block; margin: 5px 0 0 0; width: 200px; }
+#forumphp a img { width: 550px; }
+
 /*
 #loginWrap { background:         url(../img/espace_client.png) left bottom no-repeat #454d1b; width:              280px; float:              right; text-align:         right; height:             auto !important; height:             30px; min-height:         30px; padding-right:      20px; position:           absolute; margin-left:        650px; z-index:            20;
 }
