--- a/_layouts/apropos.html
+++ b/_layouts/apropos.html
@@ -2,7 +2,7 @@
 
 {% capture sidebar %}
     <div class="me">
-        <img src="/images/me.jpg" alt="" width="277" height="346" />
+        <img src="/images/me-bis.png" alt="" width="277" />
     </div>
 {% endcapture %}
 {% include sidebar %}
