--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -368,6 +368,10 @@ body {
     }
     .me {
         margin-top: 20px;
+
+        img {
+            border-color: transparent;
+        }
     }
 }
 
